# ros2_jazzy_rsy_ws

./: .gitignore  cpmmands.txt  debug_joint_limits.py  ur3_calibration.yaml  ur3e_calibration.yaml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
src/01_rsy_bringup/: CMakeLists.txt  package.xml
src/01_rsy_bringup/launch/: bringup.launch.py  multi_robot.launch.py  rviz.launch.py  spawn_robot.launch.py
src/01_rsy_bringup/rviz/: multi_robot.rviz  single_robot.rviz
src/02_robot_startup/: CMakeLists.txt  package.xml
src/02_robot_startup/config/: ur_controllers.yaml
src/02_robot_startup/launch/: ur_control.launch.py  ur_rsp.launch.py
src/02_robot_startup/urdf/: ur.ros2_control.xacro  ur.urdf.xacro
src/04_moveit_startup/: CMakeLists.txt  package.xml
src/04_moveit_startup/config/: moveit_controllers.yaml
src/04_moveit_startup/launch/: ur_moveit.launch.py
src/04_moveit_startup/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
src/04_path_planning_action_server/: README.md
src/04_path_planning_action_server/path_planning_interfaces/: CMakeLists.txt  package.xml
src/04_path_planning_action_server/path_planning_interfaces/action/: MoveJ.action  MoveL.action
src/04_path_planning_action_server/path_planning_server/: CMakeLists.txt  package.xml  setup.py
src/04_path_planning_action_server/path_planning_server/config/: path_planning_params.yaml
src/04_path_planning_action_server/path_planning_server/config/moveit/: dual_ur.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_scene_monitor.yaml
src/04_path_planning_action_server/path_planning_server/launch/: dual_robot_planning.launch.py  moveit.launch.py  path_planning_server.launch.py
src/04_path_planning_action_server/path_planning_server/path_planning_server/: __init__.py  example_client.py  path_planning_action_server.py
src/05_new_robot_startup/: CMakeLists.txt  package.xml
src/05_new_robot_startup/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/05_new_robot_startup/launch/: robot.launch.py
src/rsy_bringup/: CMakeLists.txt  package.xml
src/rsy_bringup/config/: moveit.rviz  system_config.yaml
src/rsy_bringup/launch/: rsy_bringup.launch.py
src/rsy_cube_motion/: CMakeLists.txt  package.xml
src/rsy_cube_motion/action/: HandOver.action  PresentCubeFace.action  PutDownCube.action  StartupPosition.action  TakeUpCube.action
src/rsy_cube_motion/launch/: cube_motion_server.launch.py
src/rsy_cube_motion/rsy_cube_motion/: __init__.py  cube_motion_server.py  logging_utils.py
src/rsy_cube_perception/: CMakeLists.txt  package.xml
src/rsy_cube_perception/action/: CalibrateCamera.action  ScanCube.action  ScanCubeFace.action
src/rsy_cube_perception/config/: .gitkeep  cube_calibration.json  cube_perception_calibration.json  cube_perception_config.yaml
src/rsy_cube_perception/launch/: cube_perception.launch.py
src/rsy_cube_perception/rsy_cube_perception/: scan_cube_action_server.py
src/rsy_cube_perception/srv/: ShowPreviewWindow.srv  SolveCube.srv
src/rsy_cube_solver/: CMakeLists.txt  package.xml
src/rsy_cube_solver/action/: CalibrateCube.action
src/rsy_cube_solver/config/: cube_calibration.json  cube_perception_calibration.json
src/rsy_cube_solver/launch/: cube_solver.launch.py
src/rsy_cube_solver/rsy_cube_solver/: calibrate_cube_action_server.py  cube_solver_node.py
src/rsy_gripper_controller/: CMakeLists.txt  package.xml
src/rsy_gripper_controller/config/: gripper_config.yaml
src/rsy_gripper_controller/launch/: gripper.launch.py
src/rsy_gripper_controller/python/: server.py
src/rsy_gripper_controller/scripts/: gripper_action_server.py
src/rsy_moveit_startup/: CMakeLists.txt  package.xml
src/rsy_moveit_startup/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  servo_robot1.yaml  servo_robot2.yaml  ur.srdf
src/rsy_moveit_startup/launch/: moveit.launch.py
src/rsy_mtc_planning/: CMakeLists.txt  package.xml
src/rsy_mtc_planning/action/: ExecuteMotionSequence.action
src/rsy_mtc_planning/config/: mtc_planning.yaml
src/rsy_mtc_planning/include/rsy_mtc_planning/: motion_sequence_server.hpp  mtc_task_builder.hpp  planning_logger.hpp
src/rsy_mtc_planning/launch/: mtc_planning.launch.py
src/rsy_mtc_planning/msg/: MotionStep.msg
src/rsy_mtc_planning/src/: main.cpp  motion_sequence_server.cpp  mtc_task_builder.cpp  planning_logger.cpp
src/rsy_path_planning/: CMakeLists.txt  package.xml
src/rsy_path_planning/action/: MoveJJoints.action  MoveLJoints.action
src/rsy_path_planning/config/: planning.yaml
src/rsy_path_planning/launch/: path_planning.launch.py
src/rsy_path_planning/rsy_path_planning/: __init__.py  path_planning_action_server.py
src/rsy_path_planning_action_server/: CMakeLists.txt  package.xml
src/rsy_path_planning_action_server/action/: MoveJ.action  MoveL.action
src/rsy_path_planning_action_server/launch/: path_planning.launch.py
src/rsy_path_planning_action_server/rsy_path_planning_action_server/: example_integration.py  path_planning_action_server.py  test_client.py
src/rsy_robot_startup/: CMakeLists.txt  package.xml
src/rsy_robot_startup/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  robot_config.yaml  robotiq_2f_85_static.xacro  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro  ur3_urdf_joint_limits.yaml  ur3e_urdf_joint_limits.yaml  urdf_joint_limits.yaml
src/rsy_robot_startup/launch/: robot.launch.py
src/rsy_robot_startup/meshes/: cube_stand.stl
src/rsy_robot_startup/resources/: robot1_rtde_output_recipe.txt
src/rsy_robot_startup/rsy_robot_startup/: robot_config_utils.py
