<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsy_moveit_startup</name>
  <version>0.0.1</version>
  <description>MoveIt2 configuration for dual UR robot setup</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rsy_robot_startup</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_planners_pilz_industrial_motion_planner</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>rviz2</depend>
  <depend>rviz_default_plugins</depend>
  <depend>moveit_ros_visualization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
