<?xml version="1.0"?>
<package format="3">
  <name>rsy_mtc_planning</name>
  <version>0.1.0</version>
  <description>MTC-based motion sequence planning for dual UR robot setup</description>
  <maintainer email="user@example.com">Alexander</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- MoveIt2 -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_task_constructor_msgs</depend>
  <depend>tf2_eigen</depend>

  <!-- Project dependencies -->
  <depend>rsy_gripper_controller</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
