<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsy_robot_startup</name>
  <version>0.0.1</version>
  <description>Dual UR robot startup package with ros2_control</description>
  <maintainer email="alexander@todo.todo">Alexander</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Robot description -->
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>force_torque_sensor_broadcaster</depend>
  <depend>pose_broadcaster</depend>
  <depend>velocity_controllers</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>ur_controllers</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
