<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning_server</name>
  <version>1.0.0</version>
  <description>Path planning action server for dual UR robots using MoveIt2</description>
  <maintainer email="alexander@example.com">Alexander</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>shape_msgs</depend>

  <!-- MoveIt2 -->
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_simple_controller_manager</depend>

  <!-- Custom interfaces -->
  <depend>path_planning_interfaces</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
